--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,16 +1,19 @@
-name: Build & Test with Gradle
+name: Build & Test with Gradle 🧪
 
 on:
-  push:
-    branches-ignore: [ "main" ]
+#  push:
+#    branches-ignore: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
   build:
+    name: Build & Test
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -26,3 +29,6 @@ jobs:
 
       - name: Build with Gradle Wrapper
         run: ./gradlew clean build
+
+      - name: Test with Gradle Wrapper
+        run: ./gradlew clean test
